--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,11 @@
 @import 'components';
 
 @import 'header';
+@import 'ourgoal';
+@import 'news';
+@import 'gallery';
+@import 'map';
+
 @import 'footer';
 
 @import 'media';
