--- a/css/reset.css
+++ b/css/reset.css
@@ -51,3 +51,12 @@ button {
 * {
 	font-display: fallback;
 }
+/*my styles*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+}
