--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,10 +1,15 @@
-@import url('');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap');
+// font-family: 'Open Sans', sans-serif;
 
 @font-face {
-    font-family: '';
-    src: url('');
+    font-family: 'Gotham Bold', sans-serif;
+    src: url('/fonts/Gotham-Bold.otf') format('otf');
 }
 @font-face {
-    font-family: '';
-    src: url('');
+    font-family: 'Gotham Medium', sans-serif;
+    src: url('/fonts/gotham-medium.woff2') format('woff2');
+}
+@font-face {
+    font-family: 'Gotham Book', sans-serif;
+    src: url('/fonts/Gotham-Book.woff') format('woff');
 }
