--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -3,6 +3,7 @@
     margin: 0 auto;
 }
 .btn-details {
+    display: block;
     width: 190px;
     height: 50px;
     border: 1px solid $desc-color;
@@ -10,6 +11,15 @@
     color: $primary-color;
     font-size: 14px;
     text-transform: uppercase;
+    cursor: pointer;
+    &:hover {
+        background-color: $behind-color;
+    }
+}
+.btn-form {
+    width: 140px;
+    margin-right: 0;
+    margin-left: auto;
 }
 .address {
     margin-top: 60px;
