--- a/sass/_news.scss
+++ b/sass/_news.scss
@@ -3,6 +3,7 @@
     margin: 0 auto;
 }
 .news {
+    position: relative;
     padding: 140px 0;
     width: 100vw;
     height: 1035px;
@@ -98,6 +99,13 @@
     color: $date-color;
 }
 //slider-dots 
+.left-tick {
+    position: absolute;
+    left: 250px;
+    top: 550px;
+}
 .right-tick {
-    width: 30px;
+    position: absolute;
+    right: 250px;
+    top: 550px;
 }
