--- a/sass/_news.scss
+++ b/sass/_news.scss
@@ -2,6 +2,30 @@
     position: relative;
     margin: 0 auto;
 }
+.slick-dots {
+   padding: 0;
+   margin: 0;
+   width: 50px;
+   margin: 20px auto;
+   display: flex;
+
+   button {
+       font-size: 0;
+       border: 1px solid $main-color;
+       width: 10px;
+       height: 10px;
+       margin: 10px;
+       border-radius: 5px;
+       background-color: transparent;
+   }
+    
+}
+.slick-active {
+    button {
+        background-color: #fff;
+        border: none;
+    }
+}
 .news {
     position: relative;
     padding: 140px 0;
