--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,3 +1,8 @@
+body {
+    padding-bottom: 0;
+}
+
+
 .container {
     width: 1170px;
     margin: 0 auto;
@@ -21,6 +26,9 @@
     margin-right: 0;
     margin-left: auto;
 }
+.btn-gallery {
+    margin: 60px auto;
+}
 .address {
     margin-top: 60px;
     font-family: 'Open Sans', sans-serif;
@@ -40,8 +48,14 @@
 //others
 .white-heart {
     // color: $main-color;
-    color: red;
+    color: $main-color;
 }
 .align-center {
     margin: 60px auto;
+}
+.scroll-icon {
+    position: relative;
+    top: -100px;
+    left: calc(50% - 20px);
+
 }
